<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    android:scrollbars="none"
    android:id="@+id/lay1"
    >

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="28dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="35dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_back_view"
                    android:backgroundTint="@color/use_neumorph_orange"
                    android:contentDescription="@string/image"
                    android:padding="10dp"
                    android:src="@drawable/ic_back"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:fontFamily="@font/quicksand_bold"
                    android:text="@string/new_record"
                    android:textColor="@color/use_orange"
                    android:textSize="25sp" />

                <ImageView
                    android:id="@+id/put_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/bg_back_view"
                    android:backgroundTint="@color/use_neumorph_orange"
                    android:contentDescription="@string/image"
                    android:padding="10dp"
                    android:src="@drawable/ic_put_data"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ImageContrastCheck" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/crimial_name"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <AutoCompleteTextView
                android:id="@+id/criminal_name_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_edt_text"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/Enter"
                android:importantForAutofill="no"
                android:inputType="textNoSuggestions"
                android:padding="15dp"
                android:textSize="16sp"
                tools:ignore="SpeakableTextPresentCheck">

                <requestFocus />

            </AutoCompleteTextView>

            <TextView
                android:id="@+id/pr_roll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/c_0"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <AutoCompleteTextView
                android:id="@+id/co"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_edt_text"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/Enter"
                android:importantForAutofill="no"
                android:inputType="textNoSuggestions"
                android:padding="15dp"
                android:textSize="16sp"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/crime_no_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/address"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_edt_text"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/Enter"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:padding="15dp"
                android:textSize="16sp"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/year_crime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/age"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_edt_text"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/Enter"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="3"
                android:padding="15dp"
                android:textSize="16sp"
                tools:ignore="SpeakableTextPresentCheck" />


            <TextView
                android:id="@+id/ps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/police_station"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/ps_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_edt_text"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/Enter"
                android:importantForAutofill="no"
                android:inputType="text"
                android:padding="15dp"
                android:textSize="16sp"
                tools:ignore="SpeakableTextPresentCheck" />


            <TextView
                android:id="@+id/no_case"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/criminal_no"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/case_no_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_edt_text"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/Enter"
                android:importantForAutofill="no"
                android:inputType="text"
                android:padding="15dp"
                android:textSize="16sp"
                tools:ignore="SpeakableTextPresentCheck" />


            <TextView
                android:id="@+id/year_case"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/section"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_edt_text"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/Enter"
                android:importantForAutofill="no"
                android:inputType="text"
                android:padding="15dp"
                android:textSize="16sp"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/court_name"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/courtname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_edt_text"
                android:ems="10"
                android:autofillHints="name"
                android:gravity="start|top"
                android:hint="@string/Enter"
                android:importantForAutofill="no"
                android:padding="15dp"
                android:textSize="16sp"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/notice_date_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/more_details"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/moredetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="start"
                android:background="@drawable/bg_edt_text"
                android:hint="@string/write_extra_information"
                android:minHeight="150dp"
                android:padding="15dp"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/Upload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/bg_card_red"
                android:backgroundTint="@color/use_orange"
                android:fontFamily="@font/quicksand_bold"
                android:gravity="center"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:paddingHorizontal="10dp"
                android:text="@string/upload_criminal_photo"
                android:textColor="@color/white"
                android:textSize="18sp"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/submit_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="35dp"
                android:background="@drawable/bg_card_red"
                android:backgroundTint="@color/use_orange"
                android:fontFamily="@font/quicksand_bold"
                android:gravity="center"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="18sp"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>